--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,14 @@ os:
   - osx
   - linux
 
+sudo: required
+
 language: go
 
 go: 1.4
 
 install:
-  - ./tasks/general/ci/install.sh
+  - ./tasks/general/ci/install.sh github.com/limetext/lime-qml/main
   - ./tasks/local/ci/install.sh
 
 script:
