--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,19 @@ matrix:
   include:
     - go: 1.5
       os: linux
-      env: REPORT_COVERAGE=false
+      env: REPORT_COVERAGE=true GO15VENDOREXPERIMENT=1
     - go: 1.5
       os: osx
-      env: REPORT_COVERAGE=false
+      env: REPORT_COVERAGE=false GO15VENDOREXPERIMENT=1
     - go: tip
       os: linux
-      env: REPORT_COVERAGE=true
+      env: REPORT_COVERAGE=false
     - go: tip
       os: osx
       env: REPORT_COVERAGE=false
+  fast_finish: true
+  allow_failures:
+  - go: tip
 
 addons:
   apt:
@@ -29,13 +32,12 @@ addons:
       - qtdeclarative5-private-dev
 
 install:
-  - ./tasks/general/ci/install.sh
-  - ./tasks/local/ci/install.sh
+  - make travis glide
 
 script:
-  - ./tasks/general/ci/run_tests.sh main
-  - ./tasks/local/ci/build.sh
-  - ./tasks/general/ci/check_fmt.sh
+  - make travis_test
+  - make build
+  - make check_fmt check_license
 
 notifications:
   webhooks:
