--- a/glide.yaml
+++ b/glide.yaml
@@ -14,6 +14,8 @@ import:
 - package: github.com/limetext/text
 - package: github.com/limetext/sublime
 - package: github.com/limetext/util
+- package: github.com/limetext/commands
+- package: github.com/limetext/loaders
 - package: gopkg.in/fsnotify.v0
 - package: gopkg.in/qml.v1
 excludeDirs:
