--- a/glide.yaml
+++ b/glide.yaml
@@ -1,20 +1,19 @@
 package: github.com/limetext/lime-qml
 import:
+- package: github.com/limetext/commands
 - package: github.com/limetext/gopy
   subpackages:
   - lib
 - package: github.com/limetext/lime-backend
   subpackages:
   - lib
-  - lib/commands
   - lib/keys
   - lib/log
   - lib/render
-  - lib/sublime
-  - lib/textmate
-  - lib/util
+- package: github.com/limetext/sublime
 - package: github.com/limetext/text
-- package: gopkg.in/fsnotify.v0
+- package: github.com/limetext/util
+- package: gopkg.in/fsnotify.v1
 - package: gopkg.in/qml.v1
 excludeDirs:
 - tasks
