--- a/glide.yaml
+++ b/glide.yaml
@@ -3,7 +3,7 @@ import:
 - package: github.com/limetext/gopy
   subpackages:
   - lib
-- package: github.com/limetext/lime-backend
+- package: github.com/limetext/backend
   subpackages:
   - lib
   - lib/commands
