--- a/glide.yaml
+++ b/glide.yaml
@@ -1,21 +1,16 @@
 package: github.com/limetext/lime-qml
 import:
+- package: github.com/limetext/backend
+  subpackages:
+  - keys
+  - log
+  - render
+- package: github.com/limetext/commands
 - package: github.com/limetext/gopy
   subpackages:
   - lib
-- package: github.com/limetext/backend
-  subpackages:
-  - lib
-  - lib/keys
-  - lib/log
-  - lib/render
-- package: github.com/limetext/commands
-- package: github.com/limetext/text
 - package: github.com/limetext/sublime
+- package: github.com/limetext/text
 - package: github.com/limetext/util
-- package: github.com/limetext/commands
-- package: github.com/limetext/loaders
 - package: gopkg.in/fsnotify.v1
 - package: gopkg.in/qml.v1
-excludeDirs:
-- packages
