--- a/glide.yaml
+++ b/glide.yaml
@@ -13,4 +13,4 @@ import:
 - package: github.com/limetext/text
 - package: github.com/limetext/util
 - package: gopkg.in/fsnotify.v1
-  version: 836bfd95fecc0f1511dd66bdbf2b5b61ab8b00b6
+  version: ^1.3.1
