--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,9 @@ addons:
 install:
   - make travis
 
+before_script:
+  - '[[ "$TRAVIS_OS_NAME" == "linux" ]] && /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1024x768x16'
+
 script:
   - make travis_test
 
