--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,12 @@ install:
   - make travis
 
 before_script:
-  - 'if [[ "$TRAVIS_OS_NAME" == "linux" ]] ; then /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1024x768x16 ; fi'
+  - |
+    if [[ "$TRAVIS_OS_NAME" == "linux" ]] ; then
+      export DISPLAY=':99.0'
+      /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1024x768x32
+      echo "Done! Yay! $?"
+    fi
 
 script:
   - make travis_test
