Update deadsnakes ppa name
The deadsnakes ppa has changed names!  For more information, see deadsnakes/issues#54

Committed via https://github.com/asottile/all-repos

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ addons:
   apt:
     sources:
       # - deadsnakes
-      - sourceline: 'ppa:fkrull/deadsnakes'
+      - sourceline: 'ppa:deadsnakes/ppa'
       #- sourceline: 'ppa:canonical-qt5-edgers/ubuntu1204-qt5'
     packages:
       - libonig-dev
